# papago_slack_app

./: .gitignore  README.md  manage.py  pyproject.toml
papago_slack/: admin.py  font.py  models.py  papago.py  settings.py  slack_commands.py  slack_events.py  views.py
papago_slack/migrations/: 0001_initial.py  0002_auto_20200628_1246.py
papago_slack/static/css/: base.css
papago_slack/templates/: base.html
papago_slack/templates/django_simple_slack_app/: oauth_done.html
papago_slack/tests/: tests_multiline_text.py  tests_parser.py
yangpago_slack/: admin.py  asgi.py  font.py  language_codes.py  models.py  settings.py  slack_commands.py  slack_events.py  urls.py  views.py  wsgi.py
yangpago_slack/migrations/: 0001_initial.py  0002_auto_20200628_1246.py  0003_auto_20211128_1214.py  0004_auto_20211128_1228.py  0005_auto_20211130_1243.py  0006_auto_20211130_1306.py
yangpago_slack/templates/: base.html  landing.html
yangpago_slack/tests/: tests_multiline_text.py  tests_parser.py
yangpago_slack/tests/sample/: error_case.txt  richtest_sample_!.json  richtext_sample_2.json
yangpago_slack/translator/: __init__.py  common.py  google.py  papago.py
