[tool.poetry]
name = "yangpago_slack"
version = "0.1.0"
description = "Slack bot for papago & google translation"
authors = ["Matthew, Lee <bluedisk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
slackclient = "^2.5.0"
slackeventsapi = "^2.1.0"
hgtk = "^0.1.3"
pyee = "^7.0.1"
python-dotenv = "^0.12.0"
psycopg2-binary = "2.9.2"
django-annoying = "^0.10.6"
fasttext = "^0.9.2"
requests = "^2.25.1"
sentry-sdk = "^1.0.0"
google-cloud = "^0.34.0"
google-auth = "^2.3.3"
google-cloud-translate = "^3.6.1"
pycountry = "^20.7.3"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
